# ITMO-Informatics

./: README.md  pyproject.toml
lab1/: README.md  main.py
lab2/: main.py
lab3/: 1.py  2.py  3.py
lab4/: README.md  pyproject.toml  run_tests.py  time_measure.py
lab4/data/: naive_converted.xml  wed_timetable.csv  wed_timetable.json  wed_timetable.xml  week_timetable.json  week_timetable.xml  with_lib_converted.xml
lab4/lab4/: converters.py  json_parser.py  naive.py  naive_regex.py  utils.py  with_lib.py
lab4/tests/: test_csv_convert.py  test_naive.py  test_naive_regex.py  test_parser.py  test_with_lib.py  test_xml_convert.py
